2008-08-12  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/bits/pthread-np.h: New file.

2006-03-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/ia32/machine-sp.h (thread_stack_pointer):
	Optimize esp read.

2008-08-12  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/pt-startup.c: New file.

2008-08-12  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/bits/mutex.h (__PTHREAD_RECURSIVE_MUTEX_INITIALIZER):
	Define.
	(__PTHREAD_MUTEX_RECURSIVE_INITIALIZER): Don't define.
	* include/pthread/pthread.h
	(PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP) [__USE_GNU]: Define.
	(PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP): Don't define.

2008-08-12  Neal H. Walfield  <neal@gnu.org>

	Merge in Samuel Thibault's changes from the main line.

	* Makefile.am (libpthread_a_SOURCES): Add pt-getattr.c.
	* headers.m4: Link libpthread/include/pthread/pthreadtypes.h to
	sysroot/include/pthread/pthreadtypes.h and
	libpthread/sysdeps/${arch}/bits/spin-lock-inline.h. to
	sysroot/include/bits/spin-lock-inline.h.

	* include/pthread/pthread.h: Include <sys/cdefs.h>.
	(__extern_inline): If not defined, define appropriately.

2008-08-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* include/pthread/pthreadtypes.h (__pthread_inheritsched): Remove
	comma at end of enumeration.

2008-08-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* Makefile (sysdeps_headers): Add spin-lock-inline.h.
	(SYSDEP_PATH): Move sysdeps/ia32 right after
	sysdeps/$(MICROKERNEL)/ia32.
	* include/pthread/pthread.h: Include <bits/spin-lock-inline.h>.
	* sysdeps/ia32/bits/spin-lock.h: Move inlines to...
	* sysdeps/ia32/bits/spin-lock-inline.h: ... new file.

2008-08-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/generic/bits/mutex.h: Do not include <errno.h> and
	<stddef.h>
	* sysdeps/ia32/bits/memory.h (__memory_barrier): Add memory clobber.
	* sysdeps/ia32/bits/spin-lock.h (__pthread_spin_trylock,
	__pthread_spin_unlock): Add memory clobbers.